test/tests/compiler/18_structures/invalid_types/scalar_required/not_struct.plx
type struc s(    a: i32    )

pub fn main(none) i32 {
    x: struc s = $(true)
    return not x #  can only apply boolean operators to scalars, not structs
}
